[project]
name = "ProxyPulse"
version = "0.1.0"
description = "Free proxy finder"
authors = [{name = "TishkaPon", email = "bib.maxim@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.9.5",
    "aiohttp_socks==0.10.0",
    "beautifulsoup4==4.12.3",
    "fake_useragent==2.0.3",
    "numpy==2.2.2",
    "requests==2.32.3",
    "tqdm==4.67.1",
    "lxml==5.3.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
